--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
     "react-native-web": "^0.20.0",
-    "expo-font": "~13.3.1"
+    "expo-font": "~13.3.1",
+    "react-native-svg": "15.11.2"
   }
 }
