--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
     "axios": "^1.9.0",
+    "cloudinary": "^2.6.1",
+    "dotenv": "^16.5.0",
     "expo": "^53.0.9",
     "expo-file-system": "~18.1.10",
     "expo-font": "~13.3.1",
